methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:6: error: '=' expected but identifier found.
def faire/(c:Color)
         ^PatternPicture:7: error: illegal start of simple expression
{setCouleurBrosse(c);baisseBrosse();leveBrosse()avance();gauche();avance();baisseBrosse();leveBrosse();gauche();avance();gauche();avance();gauche();}
^