methods.picture.PatternPicture.scala.code
override def run() {for (j<-1 to 2) {faireMotif()}
}
def faire\(c:Color) 
{setCouleurBrosse(c);avance();baisseBrosse();leveBrosse();gauche()  ;avance(); gauche();avance();baisseBrosse(); leveBrosse();gauche(); avance();gauche();}

def faire/(c:Color)
{setCouleurBrosse(c);baisseBrosse();leveBrosse()avance();gauche();avance();baisseBrosse();leveBrosse();gauche();avance();gauche();avance();gauche();}

def faireMotif()
{for (i<-1 to 2)
   {faire\(Color.red);avance();avance();
    faire/ (Color.blue);recule();recule();gauche();avance();avance();droite;
    faire/ (Color.yellow);avance();avance();faire\(Color.green);avance();avance();droite();avance();avance();gauche();}
 gauche();for(k<-1 to 4) {avance();};droite();}
